Enhance test to track early larval frame